# pmf-tsfm

./: .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  codecov.yml  evaluate.py  inference.py  pyproject.toml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-demo.yml  deploy-slides.yml
configs/: config.yaml  er.yaml  er_all.yaml  eval.yaml  inference.yaml  preprocess.yaml  task_cfg  train.yaml
configs/data/: bpi2017.yaml  bpi2019_1.yaml  hospital_billing.yaml  sepsis.yaml
configs/data_test/: BPI2017.yaml  BPI2019_1.yaml  Hospital_Billing.yaml  Sepsis.yaml  bpi2017.yaml
configs/local/: default.yaml.example
configs/logger/: disabled.yaml  wandb.yaml  wandb_offline.yaml
configs/lora/: chronos.yaml  default.yaml  moirai.yaml
configs/model/chronos/: bolt_base.yaml  bolt_mini.yaml  bolt_small.yaml  bolt_tiny.yaml  chronos2.yaml
configs/model/moirai/: 1_1_base.yaml  1_1_large.yaml  1_1_small.yaml  2_0_small.yaml  moe_base.yaml
configs/model/timesfm/: 1_0_200m.yaml  2_0_500m.yaml  2_5_200m.yaml
configs/paths/: default.yaml
configs/task/: full_tune.yaml  lora_tune.yaml  zero_shot.yaml
configs/task_cfg/: full_tune.yaml  lora_tune.yaml
data/: .gitignore  processed_logs.dvc  raw_logs.dvc  time_series.dvc
demo/: .dockerignore  Dockerfile  README.md  app.py  dfg_build.py  dfg_diff.py  forecast.py  forecast_live.py  log_to_series.py  precompute_demo.py  render.py  requirements.txt  upload_guard.py
demo/assets/bpi2017/chronos2/: forecast_dfg.json  metrics.json
demo/assets/bpi2017/moirai2/: actual_dfg.json  forecast_dfg.json  metrics.json
demo/assets/bpi2017/timesfm2.5/: forecast_dfg.json  metrics.json
demo/assets/bpi2019_1/chronos2/: forecast_dfg.json  metrics.json
demo/assets/bpi2019_1/moirai2/: actual_dfg.json  forecast_dfg.json  metrics.json
demo/assets/bpi2019_1/timesfm2.5/: forecast_dfg.json  metrics.json
demo/assets/hospital_billing/chronos2/: forecast_dfg.json  metrics.json
demo/assets/hospital_billing/moirai2/: forecast_dfg.json  metrics.json
demo/assets/hospital_billing/timesfm2.5/: actual_dfg.json  forecast_dfg.json  metrics.json
demo/assets/sepsis/chronos2/: actual_dfg.json  forecast_dfg.json  metrics.json
demo/assets/sepsis/moirai2/: forecast_dfg.json  metrics.json
demo/assets/sepsis/timesfm2.5/: forecast_dfg.json  metrics.json
demo/examples/: sepsis_sample.xes
demo/scripts/: make_example_log.py
demo/tests/: test_demo.py  test_deploy.py  test_forecast_live.py  test_log_to_series.py
docker/: Dockerfile  Dockerfile.dockerignore  README.md  backtest_cli.py  entrypoint.sh
docs/adr/: 0001-zerogpu-for-live-upload-compute.md  0002-precompute-bundled-gated-upload.md  0003-multi-surface-single-app-delivery.md  0004-demo-single-week-holdout-vs-true-future.md  0005-pre-rendered-svgs-in-git.md  0006-mae-figure-from-paper-table-4.md  0007-slides-v2-built-on-main-not-worktrees.md  0008-core-forecasting-artifacts-mcp-docker.md
mcp/: README.md  server.py
mcp/tests/: test_server.py
scripts/: env.sh  run_er_all.sh  run_full_pipeline.sh  run_full_tune_all.sh  run_inference_all.sh  run_lora_all.sh
scripts/hpc/: .env.hpc.example  hpc_env.sh  pull_metrics_from_vsc.sh  setup_vsc.sh  submit_er.sh  submit_evaluate.sh  submit_full_tune.sh  submit_lora.sh  submit_pipeline.sh  submit_zero_shot.sh  sync_wandb_offline.sh
slides/: .gitignore  SLIDES.md  palette.json
slides/figures/: BPI2017_O_Sent_O_Cancelled.eps  BPI2019_1_Record_Goods_Receipt.eps  Hospital_Billing_CODE_OK_BILLED.eps  Sepsis_ER_Registration_ER_Triage.eps
slides/prompts/: 01-outline.md  02-critique.md  03-content-pass.md  04-visual-feedback.md
slides/scripts/: figure_manifest.py  make_figures.py  preview_mae_main.py
slides/talk_design/: breif.md  manuscript.md  outline.md  thinking for pre.md  workflow.md
slides/template/: package.json  pnpm-lock.yaml  slides.md  style.css  vitest.config.js
slides/template/components/: Callout.vue  DfgEvolution.test.js  DfgEvolution.vue  DfgPipeline.vue  DfgSnapshot.vue  PageNo.vue  StackSpark.vue  dfgData.js  dfgData.test.js  dfgFrameState.js  dfgGeometry.js  dfgGeometry.test.js  frameForClicks.js  frameForClicks.test.js
slides/template/layouts/: assertion-evidence.vue  cover.vue  two-col-evidence.vue
slides/template/prototypes/dfg-anim/: NOTES.md  cytoscape_render.js  data.js  data.json  index.html  layout.html  make_data.py  make_dfg_gif.py  manim_scene.py  render_diagram.js  render_svg.js
slides/template/public/figures/: README.md
src/pmf_tsfm/: __init__.py  api.py  evaluate.py  inference.py  train.py
src/pmf_tsfm/data/: __init__.py  assets.py  log_to_series.py  preprocess.py  training.py  zero_shot.py
src/pmf_tsfm/er/: __init__.py  automaton.py  dfg.py  evaluate_er.py  evaluate_er_all.py
src/pmf_tsfm/export/: __init__.py  hf_results.py
src/pmf_tsfm/models/: __init__.py  base.py  base_adapter.py  chronos.py  chronos_adapter.py  moirai.py  timesfm.py
src/pmf_tsfm/models/mixins/: __init__.py  full_tune_mixin.py  lora_mixin.py
src/pmf_tsfm/utils/: __init__.py  metrics.py  precision.py  wandb_logger.py
tests/: conftest.py  test_api.py  test_chronos_adapter.py  test_data_modules.py  test_er.py  test_er_all.py  test_evaluate.py  test_export_hf_results.py  test_full_tune_mixin.py  test_hpc_env.py  test_imports.py  test_log_to_series.py  test_lora_mixin.py  test_metrics.py  test_model_factory.py  test_moirai_adapter.py  test_pipeline_integration.py  test_precision.py  test_preprocess.py  test_timesfm_adapter.py  test_utils.py
