[project]
name = "pmf-tsfm"
version = "0.1.0"
description = "Process Mining Forecasting with Time Series Foundation Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yongbo Yu"}
]
keywords = ["time-series", "forecasting", "foundation-models", "process-mining"]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    
    # Data
    "pyarrow>=14.0.0",
    
    # Logging
    "rich>=13.0.0",
    
    # Models - Chronos
    "chronos-forecasting>=1.4.0",
    
    # Models - Moirai (uni2ts)
    "uni2ts>=1.0.0",
    "gluonts>=0.14.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",  # Parallel test execution
    # Linting & Formatting
    "ruff>=0.8.0",
    # Type checking
    "mypy>=1.0.0",
    # Security
    "bandit[toml]>=1.7.0",
    # Pre-commit
    "pre-commit>=3.0.0",
]

timesfm_legacy = [
    # Legacy (TimesFM 1.0 / 2.0) is loaded from the v1 source tree via TIMESFM_V1_PATH.
    # We intentionally avoid depending on `timesfm==1.3.0` here because uv locks all extras
    # together, and `timesfm==1.3.0` conflicts with the TimesFM 2.x package used for 2.5.
    "utilsforecast>=0.1.10",
    "einshape>=1.0.0",
    "huggingface_hub[cli]>=0.23.0",
    "absl-py>=1.4.0",
    "safetensors>=0.5.3",
]

timesfm_v25 = [
    "timesfm @ https://github.com/google-research/timesfm/archive/refs/heads/master.zip ; python_version >= '3.11'",
]

[project.scripts]
pmf-inference = "pmf_tsfm.inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pmf_tsfm"]

# =============================================================================
# Ruff - Linting & Formatting (replaces black, isort, flake8)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from within except (can add later)
]

[tool.ruff.lint.isort]
known-first-party = ["pmf_tsfm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "temp/",
    "example/",
]
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", "logs", "outputs", "results", "temp"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["src/pmf_tsfm"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit - Security Linting
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "temp", "example"]
skips = ["B101"]  # Skip assert warnings (used in tests)

# =============================================================================
# Dependency Groups (uv)
# =============================================================================
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
]
