[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmf-tsfm"
version = "0.1.0"
description = "Process Mining Forecasting with Time Series Foundation Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yongbo Yu" },
]
keywords = ["time-series", "forecasting", "foundation-models", "process-mining"]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # Data
    "pyarrow>=14.0.0",
    # Logging
    "rich>=13.0.0",
    # Models - Chronos
    "chronos-forecasting>=1.4.0",
    # Models - Moirai (uni2ts)
    "uni2ts>=1.0.0",
    "gluonts>=0.14.0",
    "peft>=0.7.0",
    # Process mining - Entropic Relevance evaluation
    "pm4py>=2.7.0",
    # Experiment tracking
    "wandb>=0.18.0",
]

[project.optional-dependencies]
timesfm_legacy = [
    "utilsforecast>=0.1.10",
    "einshape>=1.0.0",
    "huggingface_hub[cli]>=0.23.0",
    "absl-py>=1.4.0",
    "safetensors>=0.5.3",
]
timesfm_v25 = [
    "timesfm @ https://github.com/google-research/timesfm/archive/refs/heads/master.zip ; python_version >= '3.11'",
]

[project.scripts]
pmf-inference = "pmf_tsfm.inference:main"

# [project.urls]
# Repository = "https://github.com/YongboYu/pmf-tsfm"

# =============================================================================
# Dev dependencies
# =============================================================================
# Install: uv sync --group dev

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15",
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

# =============================================================================
# Hatchling build config
# =============================================================================

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pmf_tsfm"]

# =============================================================================
# Ruff — linting + formatting
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "S101",   # assert usage (fine in tests)
    "RUF001", # ambiguous unicode in strings (intentional × in output)
    "RUF002", # ambiguous unicode in docstrings (intentional × in docs)
    "N806",   # variable in function should be lowercase (upstream class names)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"__init__.py" = ["F401"]
"notebooks/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["pmf_tsfm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# mypy — static type checking
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
exclude = [
    "tests/",
    "temp/",
    "example/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# pytest + coverage
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["data", "logs", "outputs", "results", "temp"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/pmf_tsfm"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_empty = true
precision = 2
